syntax = "proto3";

package wanderer.protobuf;

message float3 {
  optional float x = 1;
  optional float y = 2;
  optional float z = 3;
}
